feature: Nuevo parámetro opcional para ordenar consulta
Se agregó un parámetro no requerido para poder ordenar la consulta de post por usuarios seguidos