@@ -4,11 +4,9 @@ import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import com.mercadolibre.sprint1.dto.*;
 import com.mercadolibre.sprint1.entity.Post;
-import com.mercadolibre.sprint1.entity.User;
 import com.mercadolibre.sprint1.entity.UserFollower;
 import com.mercadolibre.sprint1.exception.BadRequestException;
 import com.mercadolibre.sprint1.repository.IRepository;
-import com.mercadolibre.sprint1.repository.impl.PostRepositoryImpl;
 import org.springframework.stereotype.Service;
 import com.mercadolibre.sprint1.service.IProductService;
 import com.mercadolibre.sprint1.utils.CResourceUtils;
@@ -16,6 +14,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -30,17 +29,21 @@ public class ProductServiceImpl implements IProductService {
     private IRepository<UserFollower> userFollowerRepository;
 
     @Override
-    public ProductsFollowedDtoResponse productsOfPeopleFollowed(int id) {
+    public ProductsFollowedDtoResponse productsOfPeopleFollowed(int id, String order) {
         CResourceUtils.MAPPER.disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES);
+
+        Comparator<Post> orden= Comparator.comparing(Post::getDate);
+        if (order != null && order.equalsIgnoreCase("date_desc")) {
+            orden = Comparator.comparing(Post::getDate).reversed();
+        }
 
         LocalDate fechaActual = LocalDate.now();
         LocalDate fechaHaceDosSemanas = fechaActual.minusWeeks(2);
-        List<Integer> idUsuarios = new ArrayList<>();
-        idUsuarios = userFollowerRepository.findAll().stream()
+        List<Integer> idUsuarios =  userFollowerRepository.findAll().stream()
                 .filter(entry -> entry.getUserFollower() == id)
                 .map(entry -> MAPPER.convertValue(entry, UserFollowerDto.class))
                 .map(UserFollowerDto::getUserFollowed)
-                .collect(Collectors.toList());
+                .toList();
 
         List<Post> posts = new ArrayList<>();
         for (Integer usuarios: idUsuarios){
@@ -51,7 +54,7 @@ public class ProductServiceImpl implements IProductService {
                 .filter(entry ->
                         (entry.getDate().isAfter(fechaHaceDosSemanas) || entry.getDate().isEqual(fechaHaceDosSemanas)) &&
                                 (entry.getDate().isBefore(fechaActual) || entry.getDate().isEqual(fechaActual)))
-                .sorted((post1, post2) -> post2.getDate().compareTo(post1.getDate()))
+                .sorted(orden)
                 .map(entry -> {
                     PostDto dto = MAPPER.convertValue(entry, PostDto.class);
                     dto.setId(entry.getId());
@@ -59,8 +62,7 @@ public class ProductServiceImpl implements IProductService {
                 })
                 .toList();
 
-        ProductsFollowedDtoResponse productsFollowedDtoResponse = new ProductsFollowedDtoResponse(id, postDto);
-        return productsFollowedDtoResponse;
+        return new ProductsFollowedDtoResponse(id, postDto);
     }
 
     private List<Post> filterPostsByUserIds(Integer userIds) {
